--- a/style.css
+++ b/style.css
@@ -110,6 +110,6 @@ body {
     border: 10px;
     text-align: center;
     background-color: black;
-    color: cyan;
+    color: rgb(245, 116, 10);
     padding-bottom: 2%;
 }
